--- a/werewolf/resources.qrc
+++ b/werewolf/resources.qrc
@@ -70,5 +70,8 @@
         <file>tupian/yyjSkyBlack.png</file>
         <file>tupian/turnPolice.png</file>
         <file>tupian/turnPoliceYes.png</file>
+        <file>tupian/load.png</file>
+        <file>tupian/mainImg.png</file>
+        <file>tupian/main.png</file>
     </qresource>
 </RCC>
