--- a/werewolf/createroomform.ui
+++ b/werewolf/createroomform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>282</width>
-    <height>326</height>
+    <width>528</width>
+    <height>354</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="pb_cancel">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>280</y>
+     <x>70</x>
+     <y>310</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="pb_commit">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>280</y>
+     <x>350</x>
+     <y>310</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -42,21 +42,21 @@
   <widget class="QLabel" name="lb_mode">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>40</y>
+     <x>60</x>
+     <y>90</y>
      <width>72</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>游戏模式</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;游戏模式&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="rb_audio">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>40</y>
+     <x>140</x>
+     <y>90</y>
      <width>61</width>
      <height>19</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QRadioButton" name="rb_video">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>40</y>
+     <x>380</x>
+     <y>90</y>
      <width>61</width>
      <height>19</height>
     </rect>
@@ -81,23 +81,23 @@
   <widget class="QLabel" name="lb_playMethod">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>80</y>
+     <x>60</x>
+     <y>120</y>
      <width>72</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>游戏玩法</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;游戏玩法&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QComboBox" name="cmb_playMethod">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>80</y>
-     <width>121</width>
-     <height>22</height>
+     <x>140</x>
+     <y>121</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
    <item>
@@ -109,46 +109,46 @@
   <widget class="QLabel" name="lb_playerNum">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>120</y>
+     <x>60</x>
+     <y>160</y>
      <width>72</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>玩家人数</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;玩家人数&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="sb_playerNum">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>120</y>
-     <width>121</width>
-     <height>22</height>
+     <x>140</x>
+     <y>160</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="lb_level">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>160</y>
+     <x>60</x>
+     <y>200</y>
      <width>72</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>等级限制</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;等级限制&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QComboBox" name="cmb_level">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>160</y>
-     <width>121</width>
-     <height>22</height>
+     <x>140</x>
+     <y>200</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
    <item>
@@ -175,23 +175,23 @@
   <widget class="QLabel" name="lb_passwd">
    <property name="geometry">
     <rect>
-     <x>11</x>
-     <y>200</y>
-     <width>91</width>
+     <x>60</x>
+     <y>240</y>
+     <width>71</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>设置房间密码</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;房间加密&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="cb_passwd">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>200</y>
+     <x>150</x>
+     <y>240</y>
      <width>21</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -201,23 +201,23 @@
   <widget class="QLabel" name="lb_ispasswd">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>240</y>
-     <width>31</width>
-     <height>21</height>
+     <x>80</x>
+     <y>270</y>
+     <width>41</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>密码</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;密码&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="le_passwd">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>240</y>
-     <width>121</width>
-     <height>21</height>
+     <x>140</x>
+     <y>270</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
@@ -226,17 +226,38 @@
     <rect>
      <x>1</x>
      <y>-5</y>
-     <width>281</width>
-     <height>331</height>
+     <width>531</width>
+     <height>361</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(36, 53, 81);
-background-color: rgb(0, 206, 206);
-background-color: rgb(0, 179, 179);</string>
+    <string notr="true"/>
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resources.qrc">:/tupian/register2.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>19</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;黑体&quot;;
+background-color: rgb(156, 121, 107);</string>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;房间设置&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <zorder>label</zorder>
@@ -255,7 +276,10 @@ background-color: rgb(0, 179, 179);</string>
   <zorder>cb_passwd</zorder>
   <zorder>lb_ispasswd</zorder>
   <zorder>le_passwd</zorder>
+  <zorder>label_2</zorder>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
