--- a/werewolf/registerdialog.ui
+++ b/werewolf/registerdialog.ui
@@ -72,7 +72,7 @@
     <item>
      <widget class="QLabel" name="lb_title">
       <property name="text">
-       <string>登录</string>
+       <string>注册</string>
       </property>
      </widget>
     </item>
