--- a/werewolf/startdialog.ui
+++ b/werewolf/startdialog.ui
@@ -31,10 +31,10 @@
   <widget class="QPushButton" name="pb_joinGame">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>810</y>
-     <width>181</width>
-     <height>51</height>
+     <x>80</x>
+     <y>530</y>
+     <width>311</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -85,7 +85,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="resources.qrc">:/tupian/startBackGround.jpg</pixmap>
+    <pixmap resource="resources.qrc">:/tupian/load.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -230,10 +230,24 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>340</y>
+     <width>341</width>
+     <height>111</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;适度游戏益脑，沉迷游戏伤身。&lt;/p&gt;&lt;p&gt;合理安排时间，享受健康生活。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
   <zorder>lb_backGrd</zorder>
   <zorder>pb_joinGame</zorder>
   <zorder>pb_notice</zorder>
   <zorder>wdg_title</zorder>
+  <zorder>label</zorder>
  </widget>
  <resources>
   <include location="resources.qrc"/>
