--- a/werewolf/chatdialog.ui
+++ b/werewolf/chatdialog.ui
@@ -10,6 +10,18 @@
     <height>531</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1041</width>
+    <height>531</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1041</width>
+    <height>531</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -83,7 +95,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pb_tool2">
+   <widget class="QPushButton" name="pb_audio">
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -93,10 +105,10 @@
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>音</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pb_tool3">
+   <widget class="QPushButton" name="pb_video">
     <property name="geometry">
      <rect>
       <x>80</x>
@@ -106,7 +118,7 @@
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>视</string>
     </property>
    </widget>
   </widget>
@@ -269,6 +281,19 @@ border-color: rgb(36, 53, 81);</string>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="pb_chatMsg">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>370</y>
+     <width>93</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>聊天记录</string>
+   </property>
   </widget>
  </widget>
  <resources/>
