--- a/werewolf/roomdialog.ui
+++ b/werewolf/roomdialog.ui
@@ -325,6 +325,27 @@
      <string>表</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>481</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 170, 127);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>label_5</zorder>
+   <zorder>pb_0_end</zorder>
+   <zorder>pb_0_begin</zorder>
+   <zorder>pb_0_keyword</zorder>
+   <zorder>p_0_img</zorder>
   </widget>
   <widget class="QLabel" name="lb_tip">
    <property name="geometry">
@@ -478,6 +499,23 @@ color: rgb(255, 255, 255);</string>
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>50</y>
+     <width>481</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(85, 170, 255);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>label_2</zorder>
   <zorder>label</zorder>
   <zorder>wdg_title</zorder>
   <zorder>pb_day</zorder>
