--- a/werewolf/spaceform.ui
+++ b/werewolf/spaceform.ui
@@ -46,19 +46,6 @@
      <height>231</height>
     </size>
    </property>
-   <widget class="QLabel" name="lb_content">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>90</y>
-      <width>401</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
    <widget class="QWidget" name="widget_2" native="true">
     <property name="geometry">
      <rect>
@@ -73,25 +60,15 @@
       <rect>
        <x>290</x>
        <y>30</y>
-       <width>71</width>
+       <width>101</width>
        <height>28</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>加好友</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pb_jubao">
-     <property name="geometry">
-      <rect>
-       <x>390</x>
-       <y>10</y>
-       <width>31</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>×</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pb_icon">
@@ -147,7 +124,7 @@
      <item>
       <widget class="QPushButton" name="pb_tui">
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">background-color: rgb(0, 170, 0);</string>
        </property>
        <property name="text">
         <string>踩</string>
@@ -163,6 +140,10 @@
      </item>
      <item>
       <widget class="QPushButton" name="pb_good">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 0, 0);
+background-color: rgb(225, 225, 225);</string>
+       </property>
        <property name="text">
         <string>点赞</string>
        </property>
@@ -170,18 +151,35 @@
      </item>
     </layout>
    </widget>
+   <widget class="QTextBrowser" name="lb_content">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>90</y>
+      <width>361</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(19, 255, 204);
+background-color: rgb(219, 255, 255);</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>10</y>
-     <width>451</width>
+     <width>441</width>
      <height>231</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(225, 255, 225);</string>
+    <string notr="true">background-color: rgb(225, 255, 225);
+background-color: rgb(255, 255, 255);
+background-color: rgb(19, 255, 204);
+background-color: rgb(219, 255, 255);</string>
    </property>
    <property name="text">
     <string/>
