--- a/werewolf/useritem.ui
+++ b/werewolf/useritem.ui
@@ -22,7 +22,7 @@
   <widget class="QPushButton" name="pb_icon">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>30</x>
      <y>10</y>
      <width>40</width>
      <height>40</height>
@@ -41,16 +41,16 @@
     </size>
    </property>
    <property name="flat">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="lb_name">
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>10</y>
+     <y>0</y>
      <width>171</width>
-     <height>22</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -66,9 +66,9 @@
   <widget class="QLabel" name="lb_state">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>80</x>
      <y>30</y>
-     <width>61</width>
+     <width>41</width>
      <height>22</height>
     </rect>
    </property>
@@ -78,35 +78,20 @@
      <pointsize>11</pointsize>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(85, 255, 127);
+color: rgb(38, 115, 0);</string>
+   </property>
    <property name="text">
     <string>状态</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lb_sex">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>10</y>
-     <width>41</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>方正舒体</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>性别</string>
    </property>
   </widget>
   <widget class="QLabel" name="lb_level">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>120</x>
      <y>30</y>
-     <width>61</width>
+     <width>241</width>
      <height>22</height>
     </rect>
    </property>
@@ -118,6 +103,42 @@
    </property>
    <property name="text">
     <string>等级</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_sex">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>0</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_add">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>10</y>
+     <width>61</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 115, 115);
+background-color: rgb(255, 170, 127);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
